PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/Panel__c.object-meta.xml
<CustomObject>
    <label>Panel</label>
    <nameField>
        <displayFormat>Panel - {0}</displayFormat>
        <label>Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>