PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Client_Interview_Ready__c.field-meta.xml
<CustomField>
    <fullName>Client_Interview_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Interview Ready</label>
    <type>Checkbox</type>
</CustomField>