PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>