PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Overall_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Overall_Feedback__c</fullName>
    <label>Overall Feedback</label>
    <type>TextArea</type>
</CustomField>