PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Panel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Panel_Comments__c</fullName>
    <label>Panel Comments</label>
    <type>TextArea</type>
</CustomField>