PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Recording_Consent__c.field-meta.xml
<CustomField>
    <fullName>Recording_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recording Consent</label>
    <type>Checkbox</type>
</CustomField>