PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Topic__c.Max_Score__c</summarizedField>
    <summaryForeignKey>Topic__c.Panel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>