PanelForce/force-app/main/default/force-app/main/default/objects/Panel__c/fields/Training_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Training_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Assignment</label>
    <referenceTo>Training_Center__c</referenceTo>
    <relationshipLabel>Panels</relationshipLabel>
    <relationshipName>Panels</relationshipName>
    <type>Lookup</type>
</CustomField>